# seek-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.md  reverse-engineering-notes.md  roadmap.md
seek_cli/: cli.py  client.py  constants.py  exceptions.py  index_cache.py  models.py  parsers.py  session.py
seek_cli/commands/: __init__.py  _common.py  detail.py  export.py  search.py
skills/seek-cli/: SKILL.md
