[project]
name = "seek-cli"
version = "0.1.0"
description = "Read-only SEEK job search CLI with structured output and documentation-first development"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenClaw Worker" }]
dependencies = [
  "browser-cookie3>=0.20",
  "click>=8.1",
  "curl-cffi>=0.13",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0",
]

[project.scripts]
seek = "seek_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seek_cli"]

[tool.ruff]
line-length = 100
